// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fix: true 1`] = `
"/
  unformatted.js
    const x = 123;
    "
`;

exports[`format: default 1`] = `
"
  unformatted.js:1:8
  ⚠  1:8  Replace = with ·=·      prettier/prettier

  syntax-error.js:1:7
  ✖  1:7  Unexpected token (1:7)  prettier/prettier

  1 warning
  1 error
"
`;

exports[`ignorePath: ".ignore" 1`] = `
[
  {
    "errorCount": 0,
    "filePath": "<tmpDir>/src_cli_test_ts___ignorePath____ignore_/non-ignored.js",
    "messages": [],
    "source": "",
    "warningCount": 0,
  },
]
`;

exports[`ignorePath: default, .prettierignore does not exist 1`] = `
[
  {
    "errorCount": 0,
    "filePath": "<tmpDir>/src_cli_test_ts___ignorePath__default___prettierignore_does_not_exist/folder/non-ignored.js",
    "messages": [],
    "source": "",
    "warningCount": 0,
  },
  {
    "errorCount": 0,
    "filePath": "<tmpDir>/src_cli_test_ts___ignorePath__default___prettierignore_does_not_exist/non-ignored.js",
    "messages": [],
    "source": "",
    "warningCount": 0,
  },
]
`;

exports[`ignorePath: default, .prettierignore exists 1`] = `
[
  {
    "errorCount": 0,
    "filePath": "<tmpDir>/src_cli_test_ts___ignorePath__default___prettierignore_exists/non-ignored.js",
    "messages": [],
    "source": "",
    "warningCount": 0,
  },
]
`;
